Added structure to swagger
