# swagger.yml
@@ -268,6 +268,31 @@ paths:
             $ref: "#/definitions/error"
       tags:
         - AdminAPI
+  /users/{name}/groups:
+    put:
+      summary: Update Groups for a user
+      operationId: UpdateUserGroups
+      parameters:
+        - name: name
+          in: path
+          required: true
+          type: string
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/updateUserGroups"
+      responses:
+        200:
+          description: A successful response.
+          schema:
+            $ref: "#/definitions/group"
+        default:
+          description: Generic error response.
+          schema:
+            $ref: "#/definitions/error"
+      tags:
+        - AdminAPI
   /groups:
     get:
       summary: List Groups
@@ -1041,6 +1066,15 @@ definitions:
     type: object
     properties:
       arns:
+        type: array
+        items:
+          type: string
+  updateUserGroups:
+    type: object
+    required:
+      - groups
+    properties:
+      groups:
         type: array
         items:
           type: string
